--- a/Registry.toml
+++ b/Registry.toml
@@ -13,3 +13,4 @@ from this registry.
 7876af07-990d-54b4-ab0e-23690620f79a = { name = "Example", path = "E/Example" }
 682c06a0-de6a-54ab-a142-c8b1cf79cde6 = { name = "JSON", path = "J/JSON" }
 c601a237-2ae4-5e1e-952c-7a85b0c7eef1 = { name = "Interact", path = "I/Interact" }
+3e78a19a-cc83-51d8-955b-515f39fd7955 = { name = "Bukdu", path = "B/Bukdu" }
